pal/outputs2/penguins_in_a_table_Java.txt
  0%|          | 0/149 [00:00<?, ?it/s]  1%|          | 1/149 [00:12<30:47, 12.48s/it]  1%|▏         | 2/149 [01:08<1:33:59, 38.37s/it]  2%|▏         | 3/149 [01:18<1:00:56, 25.04s/it]  3%|▎         | 4/149 [02:09<1:25:41, 35.46s/it]  3%|▎         | 5/149 [02:17<1:01:19, 25.56s/it]llm_build/729ad05c-2b71-11f0-8205-e1a5a23921f1/Solution.java:19: error: array required, but Object found
        penguins.sort(Comparator.comparingInt(x -> Integer.parseInt(x[2])).reversed());
                                                                     ^
1 error
  4%|▍         | 6/149 [03:08<1:21:11, 34.06s/it]  5%|▍         | 7/149 [03:16<1:00:42, 25.65s/it]  5%|▌         | 8/149 [04:15<1:25:20, 36.31s/it]  6%|▌         | 9/149 [05:11<1:38:48, 42.34s/it]  7%|▋         | 10/149 [05:19<1:13:32, 31.74s/it]  7%|▋         | 11/149 [06:14<1:29:26, 38.89s/it]  8%|▊         | 12/149 [06:26<1:10:23, 30.83s/it]  9%|▊         | 13/149 [07:11<1:19:45, 35.19s/it]  9%|▉         | 14/149 [07:18<59:36, 26.49s/it]   10%|█         | 15/149 [07:25<45:50, 20.52s/it] 11%|█         | 16/149 [08:16<1:06:25, 29.97s/it] 11%|█▏        | 17/149 [08:34<58:01, 26.37s/it]   12%|█▏        | 18/149 [09:23<1:12:18, 33.12s/it] 13%|█▎        | 19/149 [10:16<1:24:14, 38.88s/it] 13%|█▎        | 20/149 [10:27<1:05:35, 30.51s/it] 14%|█▍        | 21/149 [11:09<1:12:53, 34.17s/it] 15%|█▍        | 22/149 [11:20<57:19, 27.08s/it]   15%|█▌        | 23/149 [11:30<46:17, 22.04s/it] 16%|█▌        | 24/149 [12:21<1:03:45, 30.61s/it] 17%|█▋        | 25/149 [12:29<49:15, 23.83s/it]   17%|█▋        | 26/149 [13:09<59:12, 28.88s/it] 18%|█▊        | 27/149 [13:16<45:03, 22.16s/it] 19%|█▉        | 28/149 [13:34<42:14, 20.95s/it] 19%|█▉        | 29/149 [14:06<48:34, 24.29s/it] 20%|██        | 30/149 [14:17<40:19, 20.34s/it] 21%|██        | 31/149 [14:25<32:19, 16.43s/it] 21%|██▏       | 32/149 [14:34<27:44, 14.23s/it] 22%|██▏       | 33/149 [15:14<42:30, 21.99s/it] 23%|██▎       | 34/149 [15:27<37:24, 19.52s/it] 23%|██▎       | 35/149 [15:37<31:29, 16.57s/it] 24%|██▍       | 36/149 [16:10<40:26, 21.48s/it] 25%|██▍       | 37/149 [16:17<31:45, 17.02s/it] 26%|██▌       | 38/149 [16:25<26:28, 14.31s/it] 26%|██▌       | 39/149 [16:28<20:27, 11.16s/it] 27%|██▋       | 40/149 [16:39<20:00, 11.02s/it] 28%|██▊       | 41/149 [17:19<35:18, 19.62s/it] 28%|██▊       | 42/149 [17:32<31:32, 17.68s/it] 29%|██▉       | 43/149 [18:28<51:26, 29.11s/it] 30%|██▉       | 44/149 [18:34<38:57, 22.26s/it] 30%|███       | 45/149 [19:10<45:44, 26.39s/it] 31%|███       | 46/149 [19:26<40:08, 23.38s/it] 32%|███▏      | 47/149 [19:35<31:59, 18.82s/it] 32%|███▏      | 48/149 [20:14<41:52, 24.87s/it] 33%|███▎      | 49/149 [20:29<36:29, 21.89s/it] 34%|███▎      | 50/149 [20:37<29:16, 17.74s/it] 34%|███▍      | 51/149 [21:10<36:51, 22.57s/it] 35%|███▍      | 52/149 [21:22<31:10, 19.28s/it] 36%|███▌      | 53/149 [21:28<24:20, 15.22s/it] 36%|███▌      | 54/149 [22:04<33:53, 21.41s/it] 37%|███▋      | 55/149 [22:31<36:20, 23.20s/it] 38%|███▊      | 56/149 [23:12<44:05, 28.44s/it] 38%|███▊      | 57/149 [23:25<36:27, 23.77s/it] 39%|███▉      | 58/149 [23:38<31:08, 20.53s/it] 40%|███▉      | 59/149 [23:48<26:27, 17.64s/it] 40%|████      | 60/149 [24:10<27:46, 18.73s/it] 41%|████      | 61/149 [24:28<27:17, 18.61s/it] 42%|████▏     | 62/149 [24:37<22:36, 15.59s/it] 42%|████▏     | 63/149 [24:50<21:28, 14.99s/it] 43%|████▎     | 64/149 [25:18<26:45, 18.89s/it] 44%|████▎     | 65/149 [25:31<23:53, 17.06s/it] 44%|████▍     | 66/149 [25:39<19:47, 14.31s/it] 45%|████▍     | 67/149 [26:18<29:54, 21.88s/it] 46%|████▌     | 68/149 [26:39<28:58, 21.46s/it] 46%|████▋     | 69/149 [27:12<33:23, 25.04s/it] 47%|████▋     | 70/149 [27:25<27:55, 21.21s/it] 48%|████▊     | 71/149 [27:39<24:45, 19.04s/it] 48%|████▊     | 72/149 [27:50<21:23, 16.67s/it] 49%|████▉     | 73/149 [28:10<22:34, 17.82s/it] 50%|████▉     | 74/149 [28:34<24:33, 19.64s/it] 50%|█████     | 75/149 [28:43<20:26, 16.57s/it] 51%|█████     | 76/149 [29:06<22:19, 18.35s/it] 52%|█████▏    | 77/149 [29:16<19:03, 15.89s/it] 52%|█████▏    | 78/149 [29:36<20:14, 17.11s/it] 53%|█████▎    | 79/149 [29:42<15:54, 13.63s/it] 54%|█████▎    | 80/149 [30:09<20:32, 17.86s/it] 54%|█████▍    | 81/149 [30:36<23:14, 20.51s/it] 55%|█████▌    | 82/149 [31:09<27:00, 24.19s/it] 56%|█████▌    | 83/149 [31:39<28:38, 26.04s/it] 56%|█████▋    | 84/149 [31:46<21:55, 20.24s/it] 57%|█████▋    | 85/149 [32:19<25:34, 23.98s/it] 58%|█████▊    | 86/149 [32:29<21:01, 20.03s/it] 58%|█████▊    | 87/149 [32:37<16:58, 16.43s/it] 59%|█████▉    | 88/149 [32:47<14:39, 14.41s/it] 60%|█████▉    | 89/149 [33:15<18:20, 18.33s/it] 60%|██████    | 90/149 [33:30<17:01, 17.31s/it] 61%|██████    | 91/149 [33:40<14:48, 15.33s/it] 62%|██████▏   | 92/149 [33:48<12:21, 13.02s/it] 62%|██████▏   | 93/149 [34:18<17:03, 18.28s/it] 63%|██████▎   | 94/149 [35:12<26:35, 29.02s/it] 64%|██████▍   | 95/149 [35:24<21:24, 23.79s/it] 64%|██████▍   | 96/149 [36:15<28:15, 31.99s/it] 65%|██████▌   | 97/149 [36:24<21:46, 25.13s/it] 66%|██████▌   | 98/149 [37:15<27:58, 32.92s/it] 66%|██████▋   | 99/149 [37:28<22:14, 26.70s/it] 67%|██████▋   | 100/149 [38:16<27:00, 33.08s/it] 68%|██████▊   | 101/149 [38:23<20:17, 25.36s/it] 68%|██████▊   | 102/149 [39:00<22:33, 28.80s/it] 69%|██████▉   | 103/149 [39:12<18:18, 23.87s/it] 70%|██████▉   | 104/149 [39:18<13:52, 18.51s/it] 70%|███████   | 105/149 [39:36<13:30, 18.42s/it] 71%|███████   | 106/149 [40:21<18:49, 26.27s/it] 72%|███████▏  | 107/149 [40:31<14:58, 21.39s/it] 72%|███████▏  | 108/149 [41:23<20:56, 30.66s/it] 73%|███████▎  | 109/149 [41:35<16:35, 24.90s/it] 74%|███████▍  | 110/149 [42:23<20:44, 31.91s/it] 74%|███████▍  | 111/149 [42:29<15:16, 24.13s/it] 75%|███████▌  | 112/149 [43:20<19:52, 32.23s/it] 76%|███████▌  | 113/149 [43:26<14:41, 24.49s/it] 77%|███████▋  | 114/149 [43:33<11:09, 19.14s/it] 77%|███████▋  | 115/149 [44:29<17:01, 30.05s/it] 78%|███████▊  | 116/149 [44:33<12:20, 22.45s/it] 79%|███████▊  | 117/149 [45:23<16:14, 30.46s/it] 79%|███████▉  | 118/149 [45:34<12:45, 24.69s/it] 80%|███████▉  | 119/149 [46:31<17:14, 34.48s/it] 81%|████████  | 120/149 [46:38<12:44, 26.35s/it] 81%|████████  | 121/149 [47:22<14:45, 31.63s/it] 82%|████████▏ | 122/149 [47:29<10:54, 24.26s/it] 83%|████████▎ | 123/149 [47:41<08:49, 20.35s/it] 83%|████████▎ | 124/149 [48:24<11:19, 27.18s/it] 84%|████████▍ | 125/149 [48:31<08:31, 21.30s/it] 85%|████████▍ | 126/149 [48:43<07:02, 18.37s/it] 85%|████████▌ | 127/149 [49:25<09:20, 25.49s/it] 86%|████████▌ | 128/149 [49:31<06:52, 19.66s/it] 87%|████████▋ | 129/149 [49:42<05:40, 17.01s/it] 87%|████████▋ | 130/149 [49:54<04:55, 15.56s/it] 88%|████████▊ | 131/149 [50:37<07:07, 23.76s/it] 89%|████████▊ | 132/149 [50:46<05:27, 19.28s/it] 89%|████████▉ | 133/149 [50:55<04:18, 16.18s/it] 90%|████████▉ | 134/149 [51:36<05:54, 23.61s/it] 91%|█████████ | 135/149 [51:44<04:27, 19.13s/it] 91%|█████████▏| 136/149 [51:55<03:35, 16.54s/it] 92%|█████████▏| 137/149 [52:23<04:00, 20.05s/it] 93%|█████████▎| 138/149 [52:46<03:49, 20.84s/it] 93%|█████████▎| 139/149 [53:11<03:42, 22.28s/it] 94%|█████████▍| 140/149 [53:44<03:49, 25.46s/it] 95%|█████████▍| 141/149 [53:53<02:44, 20.52s/it] 95%|█████████▌| 142/149 [54:03<02:01, 17.37s/it] 96%|█████████▌| 143/149 [54:26<01:53, 18.94s/it] 97%|█████████▋| 144/149 [54:33<01:17, 15.40s/it] 97%|█████████▋| 145/149 [54:41<00:52, 13.09s/it] 98%|█████████▊| 146/149 [54:54<00:39, 13.09s/it] 99%|█████████▊| 147/149 [55:00<00:22, 11.10s/it] 99%|█████████▉| 148/149 [55:30<00:16, 16.79s/it]100%|██████████| 149/149 [55:43<00:00, 15.64s/it]100%|██████████| 149/149 [55:43<00:00, 22.44s/it]
Accuracy - 0.9664429530201343
